--- a/development/assets/scss/elements/_buttons.scss
+++ b/development/assets/scss/elements/_buttons.scss
@@ -1,11 +1,11 @@
 /* #Buttons
 ==================================================*/
 .custom-button {
-  position: relative;
+  @include relative();
   vertical-align: top;
   width: auto;
   height: 40px;
-  padding: 0;
+  padding: 0 1em;
   font-size: 16px;
   color: white;
   text-align: center;
