--- a/development/assets/scss/utilities/_image.scss
+++ b/development/assets/scss/utilities/_image.scss
@@ -16,3 +16,17 @@
   @include image-optimize();
 
 }
+
+.ir {
+  background-color: transparent;
+  border: 0;
+  overflow: hidden;
+  // IE 6/7 fallback
+  *text-indent: -9999px;
+  &:before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 150%;
+  }
+}
