Add Hidden Styles

--- a/development/assets/scss/utilities/_include.scss
+++ b/development/assets/scss/utilities/_include.scss
@@ -1,26 +1,28 @@
 @import
-  "prefix",
+  "prefix"
 
-  "clearfix",
-  "position",
-  "display-table",
+, "hidden"
+, "clearfix"
+, "position"
+, "display-table"
 
-  "width-height",
-  "inline-block",
-  "float",
+, "width-height"
+, "inline-block"
+, "float"
 
-  "retina-sprite",
-  "image",
-  "alpha",
+, "retina-sprite"
+, "image"
+, "alpha"
 
-// UI
-  "ui/overlay",
+  // UI
+, "ui/overlay"
 
-// Libs
-  "fonts",
+  // Libs
+, "fonts"
 
-//
-  "form";
+  //
+, "form"
+;
 
 //   "utilities/",
 
