--- a/development/index.haml
+++ b/development/index.haml
@@ -15,12 +15,16 @@
 
   / Fonts
   %link{:href => "http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic", :rel => 'stylesheet', :type => 'text/css'}/
+  %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&subset=latin,cyrillic-ext,latin-ext,cyrillic", :rel => 'stylesheet', :type => 'text/css'}/
 
   / Styles
   %link{:href => "assets/bower_components/normalize-css/normalize.css", :rel => "stylesheet", :type => 'text/css'}/
   %link{:href => "assets/css/styles.css", :rel => "stylesheet", :type => 'text/css'}/
 
-  %script{:src => "assets/js/modernizr.custom.min.js"}
+  / Icons
+  %link{:href => "assets/bower_components/ionicons/css/ionicons.min.css", :rel => "stylesheet", :type => 'text/css'}/
+
+  %script{:src => "assets/bower_components/modernizr/modernizr.js", :defer => 'defer'}
 %body
   .site-container
     %h1 Simple Template Layout
